# routes/user.js
@@ -5,13 +5,13 @@ const usersController = require('../controllers/users');
 const validation = require('../validation/validate')
 
 router.get('/', usersController.getAllUsers);
-router.get('/:id', usersController.getsingleUser)
+router.get('/:id', validation.validateId, usersController.getsingleUser)
 
-router.post('/', validation.saveUser, usersController.PostNewUser);
+router.post('/', validation.validationRule, usersController.PostNewUser);
 
-router.put('/:id', validation.saveUser, usersController.UpdateUser);
+router.put('/:id', validation.validationRule, usersController.UpdateUser);
 
-router.delete('/:id', usersController.DeleteUser);
+router.delete('/:id', validation.validateId, usersController.DeleteUser);
 //validate the id 
 
 module.exports = router;
